--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -459,3 +459,21 @@ body {
     height: 80%;
   }
 }
+
+.construction {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: white;
+}
+/* Put h2 directly under h1 construction */
+
+.construction h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+}
