--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -460,14 +460,26 @@ body {
   }
 }
 
+/* Put the construction directly in the middle of the page also phone responsive */
+
 .construction {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
   color: white;
 }
+
+/* Put h1 directly under construction */
+
+.construction h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 3rem;
+  font-weight: 400;
+  text-align: center;
+}
+
 /* Put h2 directly under h1 construction */
 
 .construction h2 {
@@ -476,4 +488,25 @@ body {
   font-size: 2rem;
   font-weight: 400;
   text-align: center;
+}
+
+/* Put the p directly under h2 construction */
+
+.construction p {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+/* Make a link remove the underline and the blue text */
+
+.construction a {
+  text-decoration: none;
+  color: white;
+}
+
+.construction a:hover {
+  text-decoration: underline;
 }
