--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Import inter font */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
+
+/* Media screen phone, set NAVCLOSED to display none */
+
+@media (max-width: 640px) {
+	.NAVCLOSED {
+		display: none;
+	}
+}
